--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,10 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: #fafcff;
-}
-
 h1,
 h2,
 h3,
@@ -18,6 +14,7 @@ h6 {
   @apply font-poppins;
 }
 
-p {
+p,
+a {
   @apply font-inter;
 }
